<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="556dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="88dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="490dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/corners"
                android:gravity="center"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/corners"
                android:gravity="center"
                android:hint="@string/email"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/corners"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/log_in_btn"
                android:textColor="@color/white"
                android:text="@string/sign_up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/signUpText"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/blue"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>