<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="635dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="67dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="362dp"
            android:gravity="center"
            android:orientation="vertical"

            >


            <EditText
                android:id="@+id/usernameTxt"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:background="@drawable/corners"
                android:hint="@string/username"
                android:text=""
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/corners"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logIn"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/log_in_btn"
                android:textColor="@color/white"
                android:text="@string/log_in" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/logInText"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="18dp" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>