<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/backgroundGray"
    tools:context=".FragmentChangeAccountData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="350dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Change data"
                    android:textAlignment="center"
                    android:textColor="@color/darkGray"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="330dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/corners"
                    android:hint="@string/email"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/darkGray"
                    android:textColorHint="#858585"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/userDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/corners"
                    android:hint="@string/displayName"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/darkGray"
                    android:textColorHint="#858585" />

                <EditText
                    android:id="@+id/userDescription"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/corners"
                    android:hint="@string/description"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/darkGray"
                    android:textColorHint="#858585" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnChangeData"
                    android:layout_width="173dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/log_in_btn"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="170dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="Post karma"
                        android:textColor="@color/darkGray"
                        android:textSize="20dp" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/icons8_like_24" />

                    <TextView
                        android:id="@+id/postKarma"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="200"
                        android:textColor="@color/darkGray"
                        android:textSize="20dp" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/icons8_dislike_24" />
                </LinearLayout>

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="170dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="Comments karma"
                        android:textColor="@color/darkGray"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/icons8_like_24" />

                    <TextView
                        android:id="@+id/commentKarma"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="200"
                        android:textColor="@color/darkGray"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/icons8_dislike_24" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>